tenzir/integration/data/reference/functions/test_slice/step_06.ref
error: `end` must be at least 0, but got -1
 --> <input>:5:24
  |
5 |     x = x.slice(0, end=-1)
  |                        ^^ 
  |